--- a/assets/css/live.css
+++ b/assets/css/live.css
@@ -1,3 +1,8 @@
+    body{
+        background: black;
+        margin: 0px;
+    }
+
     /* ---------------- */
     /* ---   GRID   --- */
     /* ---------------- */
@@ -13,35 +18,30 @@
     }
 
     .content{
-        background: green;        
         overflow:hidden;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
-        z-index: 10;                 
+        z-index: 9;         
     }
 
     .topics{
-        background: black;
         font-size: 3vw;
         grid-column: 2 / 3;
         grid-row: 1 / 2;
-        z-index: 9;
-
-        /* creating a nested grid */
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 25% 7% 68%;
+        z-index: 8;         
     }
 
     .footer{
         background: orange;
+        font-size: 4vw;        
         overflow:hidden;        
         grid-column: 1 / 3;
         grid-row: 2 / 3;
-        z-index: 8;         
+        border-color: black;
+        z-index: 7;
+
         display:flex;
         align-items:center;
-        font-size: 4vw;
     }
 
     #overlay{
@@ -49,75 +49,44 @@
         overflow:hidden;
         grid-column: 1 / 3;
         grid-row: 1 / 3;
-        z-index: 14;
-        opacity: 0.98;
-        color: white; 
-        font-family: "Arial Narrow", Helvetica, sans-serif;        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 4vw;
+        z-index: 12;   
+        /*opacity: 0.75; */
     }
 
-    /* -------------------------- */
-    /* ---   TITLE OVERLAYS   --- */
-    /* -------------------------- */
+    /* ------------------- */
+    /* ---   CONTENT   --- */
+    /* ------------------- */
 
-    .contentTitle, .thumbnailTitle{
-        font-family: "Arial Narrow", Helvetica, sans-serif;
-        color: white;
-        font-weight: 600;
-        text-transform: uppercase;        
-    }
-
-    .contentTitle{
+    #contentTitle{
         overflow:hidden;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
-        z-index: 12;   
+        z-index: 11;   
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 8vw;        
+        font-family: "Arial Narrow", Helvetica, sans-serif;                
     }
 
-    .contentTitleBox{
-        background: black; 
-        opacity: 0.75; 
-        color:white; padding:25px 100px 25px 100px;
+    #contentTitleBox{
+        background: rgba(0, 0, 0, .75); 
+        color: white;
+        padding:25px 100px 25px 100px        
     }
 
-
-    .thumbnailTitle{
-        /* style */
-        overflow:hidden;
-        z-index: 12;   
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 3vw;        
-
-        /* nested grid */
-        grid-column: 1;
-        grid-row: 1 / 2; 
+    .image{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 
-    .thumbnailTitleBox{
-        background: black; 
-        opacity: 0.55; 
-        color:white; padding:5px 10px 5px 10px;
-
-        /* nested grid */
-        grid-column: 1;
-        grid-row: 1 / 2; 
-    }
 
     /* ------------------ */
     /* ---   TOPICS   --- */
     /* ------------------ */
 
-
-    .topic, .topicFooter, #timer{
+    .topic, #timer, .footer, #thumbnailCaption, #overlay{
         font-family: "Arial Narrow", Helvetica, sans-serif;
         color: white;
         font-weight: 600;
@@ -128,51 +97,43 @@
 
     .topic{
         background: #DC4533;
-        padding: 5px;
+        padding: 5px;        
         text-align: left;
     }
-
-    .topicFooter{
-        margin-left: 20px;
-    }
-
-    #thumbnail{
-        display: block;
-        width: 100%; 
-
-        /* nested grid */
-        grid-column: 1;
-        grid-row: 1 / 2; 
-    }
-
     #timer{
         background:#333333;
         text-align: center;
-
-        /* nested grid */
-        grid-column: 1;
-        grid-row: 2 / 3; 
     }
 
-    #topicList{
-        /* nested grid */
-        grid-column: 1;
-        grid-row: 3 / 4; 
+    .footerTitle{
+        margin-left: 50px;        
     }
 
-
-    /* ----------------- */
-    /* ---   OTHER   --- */
-    /* ----------------- */
-
-
-    .image{
+    .thumbnailContainer{
+        display: flex;
+    }
+    .thumbnailWrapper{
+        margin: 0;
+        position: relative;
         width: 100%;
-        height: auto;
-        object-fit: cover;
+    }
+    #thumbnail{
+        display: block;
+        width: 100%;
+    }
+    #thumbnailCaption{
+        position: absolute;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 10px;
+
+        /* text over image */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);       
     }
 
-    body{
-        background: black;
-        margin: 0px;
+    video{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;    
     }
