--- a/assets/css/live.css
+++ b/assets/css/live.css
@@ -50,8 +50,14 @@
         grid-column: 1 / 3;
         grid-row: 1 / 3;
         z-index: 12;   
-        /*opacity: 0.75; */
     }
+
+    .overlayImage{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
 
     /* ------------------- */
     /* ---   CONTENT   --- */
